Fix for issue: 1.Ratings widget in readonly mode is broken in IE11 2.Cards broken in studio mode
(cherry picked from commit 50dfeb5427452b626dac4efc12b44f46aaa0751f)

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -2735,6 +2735,7 @@ If the height and width are not specified the video takes the height of the post
       overflow: hidden;
       top: 0;
       left: 0;
+      white-space: nowrap;
     }
     .ratings {
        font-size: inherit;
@@ -2750,6 +2751,7 @@ If the height and width are not specified the video takes the height of the post
         width: inherit;
         top: 0;
         left: 0;
+        white-space: nowrap;
       }
     }
   }
